--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -10,6 +10,36 @@
     align-items: flex-end;
 }
 
+/* Left Side */
+
+.hero-left{
+gap: 30px;
+}
+
+.hero-title{
+    position: relative;
+    z-index: 1;
+}
+
+.hero-title>h1{
+    font-weight: 600;
+    font-size: 3.8rem;
+    line-height: 4rem;
+}
+
+.orange-circle{
+    height: 4rem;
+    width: 4rem;
+    background: var(--orange-gradient);
+    border-radius: 100%;
+    position: absolute;
+    right: 28%;
+    top: -10%;
+    z-index: -1;
+}
+
+
+
 /* Right Side */
 
 .image-container{
