--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -38,6 +38,33 @@ gap: 30px;
     z-index: -1;
 }
 
+.search-bar{
+    background-color: white;
+    border-radius: 5px;
+    border: 3px solid rgba(120, 120, 120, 0.374);
+    padding: 0.5rem 1rem;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.search-bar > input{
+    border: none;
+    outline: none;
+}
+
+.stats{
+    width: 100%;
+    justify-content: space-between; 
+}
+.stat>:nth-child(1)
+{
+    font-size: 2rem;
+}
+.stat:nth-child(1) > :last-child
+{
+    color: orange;
+}
+
 
 
 /* Right Side */
