--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -36,7 +36,6 @@
         align-items: flex-start;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
         transition: all 300ms ease-in;
-
-        
+        z-index: 10;  
     }
 }
