--- a/src/components/Residencies/Residencies.css
+++ b/src/components/Residencies/Residencies.css
@@ -64,3 +64,11 @@ right: 0;
 {
     box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.25);
 }
+@media(max-width: 640px){
+    .r-head{
+        align-items: center;
+    }
+    .r-buttons{
+        position: initial;
+    }
+}
