--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -51,3 +51,20 @@
     color: white;
     scale: 0.8;
 }
+@media(max-width: 1024px){
+    .c-container{
+        flex-direction: column;
+    }
+    .c-right{
+        justify-content: center;
+    }
+    .contactModes{
+        width: 100%;
+    }
+    .row{
+        flex-direction: column;
+    }
+    .mode{
+        width: 100%;
+    }
+}
